# yap-raptor

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure.in  example.rdf  raptor.yap  raptor_yap.c  rdf.yap
cmake/: FindRAPTOR.cmake
