CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( YAP_RAPTOR C )

SET ( YAP_RAPTOR_VERSION 0.1)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(YAP REQUIRED)
IF (NOT YAP_FOUND)
  MESSAGE (SEND_ERROR "YAP was not found!")
ENDIF (NOT YAP_FOUND)

FIND_PACKAGE(RAPTOR REQUIRED)
IF (NOT RAPTOR_FOUND)
  MESSAGE (SEND_ERROR "RAPTOR dependency was not found!")
ENDIF (NOT RAPTOR_FOUND)

INCLUDE_DIRECTORIES(
     ${YAP_INCLUDE_DIR}
     ${RAPTOR_INCLUDE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
     .
)

SET ( SOURCES
  raptor_yap.c 
  )

ADD_LIBRARY(raptor_yap SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(raptor_yap
  ${RAPTOR_LIBRARY}
)

INSTALL(TARGETS raptor_yap DESTINATION ${YAP_PL_LIBRARY_DIR})
INSTALL(FILES rdf.yap DESTINATION ${YAP_PL_LIBRARY_DIR})
